--- a/ig-ssi/src/main/res/layout/item_sent_attestation.xml
+++ b/ig-ssi/src/main/res/layout/item_sent_attestation.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="?selectableItemBackground">
+    android:background="?selectableItemBackground"
+    android:paddingLeft="16dp"
+    android:paddingTop="16dp"
+    android:paddingRight="16dp">
 
     <TextView
         android:id="@+id/publicKey"
@@ -16,14 +17,22 @@
         android:typeface="monospace"
         android:ellipsize="end"
         android:lines="1"
-        tools:text="FJASFFEWASD123i9112" />
+        tools:text="MIGeMA0GCSqGSIb3DQEBAQUAA4GMADCBiAKBgGybbjUshmUNrwDZqf7BuUaGESdn" />
 
     <TextView
         android:id="@+id/attributeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:typeface="monospace"
-        tools:text="130.161.211.254:1873" />
+        tools:text="NAME" />
+
+    <TextView
+        android:id="@+id/signDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:typeface="monospace"
+        tools:text="19/12/2021 19:30:32" />
+
 
     <TextView
         android:id="@+id/metadata"
