--- a/ig-ssi/src/main/res/layout/present_attestation_dialog.xml
+++ b/ig-ssi/src/main/res/layout/present_attestation_dialog.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp">
-
+    android:paddingRight="10dp"
+    android:minHeight="300dp"
+    android:clipToPadding="false">
 
     <ImageView
         app:layout_constraintBottom_toTopOf="@id/qrCodeView"
@@ -18,12 +18,14 @@
         android:layout_height="wrap_content"
         tools:srcCompat="@tools:sample/avatars"
         android:visibility="gone"
-        android:id="@+id/pictureValueView" />
+        android:id="@+id/pictureValueView"
+        android:contentDescription="@string/credential_image" />
 
     <ImageView
         android:id="@+id/qrCodeView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -50,6 +52,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
+        android:layout_marginLeft="-10dp"
+        android:layout_marginRight="-10dp"
         android:indeterminateTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -58,7 +62,7 @@
 
     <ProgressBar
         android:id="@+id/timeoutProgressBar"
-        android:visibility="invisible"
+        android:visibility="gone"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -74,12 +78,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/timeoutProgressBar"
-        android:text="Switch"
+        android:text="@string/switch_str"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/QRSwitch"
         android:visibility="gone"
-        android:textOff="Display first QR code" />
+        android:textOff="@string/display_first_qr_code" />
 
     <View
         android:layout_width="0dp"
