--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="colorPrimarySSI">#810000</color>
     <color name="colorPrimaryDarkSSI">#570000</color>
 
+    <color name="colorPrimaryValueTransfer">#009688</color>
+    <color name="colorPrimaryDarkValueTransfer">#015951</color>
+
     <color name="text_primary">#000000</color>
     <color name="text_secondary">#666666</color>
     <color name="text_tertiary">#AAAAAA</color>
