--- a/valuetransfer/src/main/res/values/styles.xml
+++ b/valuetransfer/src/main/res/values/styles.xml
@@ -13,4 +13,53 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Rounded" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">10dp</item>
+    </style>
+
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:backgroundTint">@drawable/dialog_rounded</item>
+    </style>
+
+    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
+        <item name="android:statusBarColor">@color/colorPrimaryValueTransfer</item>
+        <item name="android:navigationBarColor">@color/colorPrimaryValueTransfer</item>
+    </style>
+
+    <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/dialog_rounded</item>
+    </style>
+
+    <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="bottomSheetStyle">@style/BottomSheet</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+    </style>
+
+<!--    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog" />-->
+
+    <style name="ButtonRounded" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">12dp</item>
+        <item name="android:background">@drawable/button_rounded</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="ButtonWhiteRounded" parent="ButtonRounded">
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/colorPrimaryValueTransfer</item>
+    </style>
+
+    <style name="ButtonDarkGreenRounded" parent="ButtonRounded">
+        <item name="backgroundTint">@color/colorPrimaryDarkValueTransfer</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
