--- a/freedomOfComputing/src/main/res/layout/content_main_activity_foc.xml
+++ b/freedomOfComputing/src/main/res/layout/content_main_activity_foc.xml
@@ -14,182 +14,13 @@
         android:scrollbars="none">
 
         <LinearLayout
+            android:id="@+id/torrentList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#ddd"
-                android:text="@string/torrentFileName"
-                android:textAllCaps="false" />
-
-<!--            <Button-->
-<!--                android:id="@+id/button2"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-
-<!--            <Button-->
-<!--                android:id="@+id/button3"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button4"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button5"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button6"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button7"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button8"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-<!--            <Button-->
-<!--                android:id="@+id/button9"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button10"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button11"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button12"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button13"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button14"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button15"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button16"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button17"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button18"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button19"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button20"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#ddd"-->
-<!--                android:text="@string/torrentFileName"-->
-<!--                android:textAllCaps="false" />-->
-
         </LinearLayout>
 
-
     </ScrollView>
-
-    <ListView
-        android:id="@+id/uploadList"
-        android:layout_width="409dp"
-        android:layout_height="729dp" tools:layout_editor_absoluteX="1dp" tools:layout_editor_absoluteY="1dp"/>
-
-
-
-
 
 </android.widget.RelativeLayout>
