--- a/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
+++ b/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
@@ -30,6 +30,7 @@
                 android:focusable="true">
 
                 <ImageButton
+                    android:id="@+id/download_progress"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:scaleType="fitCenter"
@@ -95,7 +96,7 @@
 
     <include layout="@layout/content_main_activity_foc" />
 
-<!--    <include layout="@layout/fragment_download" />-->
+    <include layout="@layout/fragment_download" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
