--- a/detoks/src/main/res/layout/item_token.xml
+++ b/detoks/src/main/res/layout/item_token.xml
@@ -15,12 +15,11 @@
         app:layout_constraintEnd_toEndOf="@+id/latestTimestamp" />
 
     <com.google.android.material.button.MaterialButton
-        android:text="History"
-        style="@style/Button"
-        android:layout_width="90dp"
-        android:layout_height="31dp"
+        android:text="HISTORY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/historyButton"
-        android:textSize="10dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/verifyButton"
         app:layout_constraintEnd_toEndOf="@+id/currentOwner"
         app:layout_constraintTop_toTopOf="@+id/verifyButton" />
@@ -38,24 +37,21 @@
         android:layout_marginStart="32dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:text="Verify"
-        style="@style/Button"
-        android:layout_width="90dp"
-        android:layout_height="31dp"
+        android:text="VERIFY"
         android:id="@+id/verifyButton"
-        android:textSize="10dp"
+        android:textSize="15sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/historyButton"
         app:layout_constraintStart_toStartOf="@+id/currentOwner"
-        app:layout_constraintTop_toBottomOf="@+id/currentOwner"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/currentOwner" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/valueToken"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="32dp"
         tools:text="50"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
